--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>gsgssssss1</title>
+    <meta property="og:title" content="Congratulations 🎓" />
+    <meta property="og:description" content="Special card just for you! ❤️" />
+    <meta property="og:image" content="https://veeanty.github.io/gsgssssss1/bunga.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://veeanty.github.io/gsgssssss1/" />
 
     <link
       rel="icon"
