--- a/index.html
+++ b/index.html
@@ -177,7 +177,13 @@
 
       #play-button:hover {
         background: #ff1493;
+      }@media (max-width: 600px) {
+        .flower-bg {
+          width: 100vw;
+          height: auto;
+        }
       }
+      
     </style>
   </head>
   <body>
