--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         background-attachment: fixed;
         color: #fff;
         position: relative;
-        overflow: hidden;
+        overflow-x: hidden;
+        overflow-y: auto; /* biarkan scroll vertikal tetap ada jika diperlukan */
         text-align: center;
       }
 
@@ -177,11 +178,6 @@
 
       #play-button:hover {
         background: #ff1493;
-      }@media (max-width: 600px) {
-        .flower-bg {
-          width: 100vw;
-          height: auto;
-        }
       }
       
     </style>
