--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        width: 600px;
+        width: 100vw;
         height: auto;
         transform: translate(-50%, -50%);
         opacity: 0.15;
