--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>gsgssssss1</title>
-    <meta property="og:title" content="Congratulations 🎓" />
+    <meta property="og:title" content="Munaqosatulation 🎓" />
     <meta property="og:description" content="Special card just for you! ❤️" />
     <meta
       property="og:image"
