--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <style>
       * {
         box-sizing: border-box;
-        overflow-y: hidden;
       }
 
       body {
@@ -66,8 +65,8 @@
       }
 
       body::before {
-        width: 400px;
-        height: 400px;
+        max-width: 100vw;
+        max-height: 100vh;
         background: rgba(255, 105, 180, 0.3);
         top: 10%;
         left: 60%;
@@ -75,8 +74,8 @@
       }
 
       body::after {
-        width: 300px;
-        height: 300px;
+        max-width: 100vw;
+        max-height: 100vh;
         background: rgba(255, 0, 0, 0.2);
         bottom: 5%;
         right: 20%;
